# decksmith

./: .gitignore  .project-actions.json  Untitled-1.ipynb  WEBSITE_GUIDE.md  build.py  installer.cfg  pyproject.toml
.github/workflows/: deploy.yml
data/: card_spec.json  deck.csv  deck.json  shapes.json
decksmith/: card_builder.py  deck_builder.py  export.py  image_ops.py  logger.py  macro.py  main.py  project.py  utils.py  validate.py
decksmith/gui/: app.py
decksmith/gui/static/css/: style.css
decksmith/gui/static/js/: main.js
decksmith/gui/templates/: index.html
decksmith/renderers/: __init__.py  image.py  shapes.py  text.py
decksmith/templates/: deck.csv  deck.json  deck.yaml
docs/: DEVELOPMENT.md  DOCS.md  README.md  ROADMAP.md
pydeck/: card_builder.py  deck_builder.py  export.py  main.py  validate.py
src/: builder.py  card_builder.py  deck_builder.py  utils.py
templates/: deck.csv  deck.json
test/: test_deck.py
test/data/: comprehensive.json  deck.csv  shapes.json  single_card.json  transparency_test.json
tests/: test_deck.py  utils.py
tests/data/: comprehensive.json  deck.csv  deck.json  opacity_test.json  single_card.json  text_transparency_test.json  transparency_test.json
website/: docs.html  index.html  robots.txt  sitemap.xml
website/css/: style.css
