[project]
name = "pydeck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "pandas",
    "pillow>=11.3.0",
    "reportlab>=4.4.3",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pydeck*", "test*"]
namespaces = false

[tool.setuptools.package-data]
pydeck = ["../templates/*"]

[project.scripts]
pydeck = "pydeck.main:cli"
