[project]
name = "decksmith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "jval==1.0.6",
    "pandas",
    "pillow>=11.3.0",
    "reportlab>=4.4.3",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["decksmith*", "test*"]
namespaces = false

[tool.setuptools.package-data]
decksmith = ["../templates/*"]

[project.scripts]
decksmith = "decksmith.main:cli"
